# AgenticGenBrim

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/agents/: designer-impl.md  ifc-impl.md  quality-check.md
.claude/commands/: impl.md
backlog/: PROJECT_SPEC.md
cloud_latex/: .latexmkrc  cover.tex  main.tex  references.txt  report.md  thesis_jsce.tex
data/evaluation_v4/: report.md
docs/: ARCHITECTURE.md  COMPONENT_DESIGNER.md  COMPONENT_EXTRACTOR.md  COMPONENT_JUDGE.md  DEV_GUIDE.md  EVALUATION.md  SYSTEM_OVERVIEW.txt  USAGE.md  json_spec.md  txt_for_thesis.txt
scripts/: plot_bimcim_survey.py  run_judge_sample.py
src/: CLAUDE.md  main.py
src/bridge_agentic_generate/: config.py  llm_client.py  logger_config.py  main.py
src/bridge_agentic_generate/designer/: models.py  prompts.py  services.py
src/bridge_agentic_generate/judge/: CLAUDE.md  __init__.py  (+5 more)
src/bridge_json_to_ifc/: convert_detailed_json_to_ifc.py  convert_json_to_ifc.py  convert_senkei_json_to_ifc.py  convert_simple_to_detailed_json.py  convert_simple_to_senkei_json.py  models.py  run_convert.py  senkei_models.py
src/bridge_llm_mvp/: config.py  llm_client.py  logger_config.py  main.py
src/evaluation/: __init__.py  main.py  metrics.py  models.py  plot.py  runner.py
tasks/: L_load_impl.md  convert_senkei_json_to_ifc_impl.md  dead-load-per-girder.md  evaluation_phase1.md  heatmap_final_pass.md  patch-plan-candidates.md  sm490-plate-thickness-fy.md  template.md  web-slenderness-check.md
tests/bridge_agentic_generate/: __init__.py  test_main.py
tests/judge/: __init__.py  test_report.py  test_services.py
卒論_阿部大樹_本文tex/: thesis_jsce.tex
(+49 files in other folders)
