[project]
name = "agenticgenbrim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "ifcopenshell>=0.8.4",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.6",
    "pypdf>=6.4.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
# Python バージョン
target-version = "py313"

# 文字数制限（お好みで）
line-length = 120

# チェック対象ディレクトリ
src = ["src"]

# 除外パス
exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# 必要になってきたらルールを足したり無効化したり
select = ["E", "F", "I"]  # E,F: pycodestyle/pyflakes, I: import整理
ignore = []

[tool.ruff.format]
# Black 互換フォーマット（デフォルトでOK）
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
